cliqz@cliqz.com/chrome/skin/browser.css
/* CLIQZ BINDINGS  */

#PopupAutoCompleteRichResult {
  -moz-binding: url("chrome://cliqz/content/components.xml#autocomplete-rich-result-popup-cliqz");
}

/* bookmark icon ovveride */
#star-button {
  list-style-image: url(chrome://cliqzres/content/skin/star-icons.png);
}

@media (min-resolution: 2dppx) {
  #star-button {
    list-style-image: url(chrome://cliqzres/content/skin/star-icons@2x.png);
  }
}

.autocomplete-richlistbox {
  -moz-binding: url("chrome://cliqz/content/components.xml#autocomplete-richlistbox-cliqz");
}

/* result item */
.autocomplete-richlistitem {
  -moz-binding: url("chrome://cliqz/content/components.xml#autocomplete-richlistitem-cliqz");
  padding: 0 0;
  border-width: 3px 3px 0px 0;
  border-style: solid;
  border-color: #cccccc;
}

.autocomplete-richlistitem  * {
  /*
  background-color: red;
  border: 1px solid green;
  */
}

/*
.autocomplete-richlistitem * {
  background-color: red;
  border: 1px solid black;
}
*/

.button-cliqz {
  -moz-binding: url("chrome://cliqz/content/components.xml#button-cliqz");
}

.cliqz-ac-site-icon-ssl {
  background: url(chrome://cliqzres/content/skin/lock_light.png) no-repeat 0% 60%;
}

.cliqz-left-separator {
  width: 13px;
  height: 24px;
}

.cliqz-separator-10 {
  width: 10px;
}

.cliqz-url-box {
}

.cliqz-image-box {
}

.cliqz-ac-image {
  width: 96px;
  height: 54px;
  padding: 5px 5px 5px 0px;
}

.cliqz-image {
}

.cliqz-image-desc {
  background-color: rgba(0, 0, 0, 0.6);
  font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  font-weight: bold;
  font-size: 9pt;
  color: white;
  padding: 2px 5px 2px 5px;
  margin: 0px 5px 10px 0px;
}

/* switch to tab*/
.ac-action-text {
  font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  background-color: lightgrey;
  color: white;
  padding: 2px 4px;
}

.toolbarbutton-1 {}
/* CLIQZ STYLE */

/* autocomplete popup container */
#PopupAutoCompleteRichResult {
  max-height: 165px; 
}

.ac-type-icon {
  display: none;
}

/* progress bar */
#cliqz-progress {
  height: 5px;
  background-color: green;
}

.autocomplete-richlistitem[type="cliqz-results"] {
  /* background-color: green; */
}

.autocomplete-richlistitem[type="cliqz-suggestions"] {
  /* background-color: lightgreen; */
}

/* general autocomplete item styles */
.ac-title-box {
  height: 24px;
  font-family: Verdana, Geneva, sans-serif;
  font-size: 10pt;
  font-weight: 500;
  padding: 10px 0 2px 0;

  /* windows */
  margin: 0px;
}

.autocomplete-richlistitem[type="favicon"] .ac-title-box, 
.autocomplete-richlistitem[type="bookmark"] .ac-title-box,
.autocomplete-richlistitem[type="switchtab"] .ac-title-box,
.autocomplete-richlistitem[type^="action"] .ac-title-box {
  color: #996699;
}

.autocomplete-richlistitem[type="cliqz-results"] .ac-title-box,
.autocomplete-richlistitem[type="cliqz-suggestions"] .ac-title-box {
  color: #003366;
}

.cliqz-ac-title-suggestion-desc {
  color: #999999;
  font-weight: 500;
}

.cliqz-ac-title-suggestion {
  color: #669999;
  font-weight: 500;
  font-style: italic;
}


/* source color */
.cliqz-ac-source-icon {
  width: 5px;
  height: 62px;
  margin-right: 12px;
  background-position:right 5px center;
  background-repeat: no-repeat;
  transition: width 0.2s;
}

.autocomplete-richlistitem[type="cliqz-results"] .cliqz-ac-source-icon {
  background-color: #336699;
  background-image: url(chrome://cliqzres/content/skin/page.png);
}

.autocomplete-richlistitem[type="cliqz-suggestions"] .cliqz-ac-source-icon {
  background-color: #99cccc;
  background-image: url(chrome://cliqzres/content/skin/search.png);
}

/* history */
.autocomplete-richlistitem[type="favicon"] .cliqz-ac-source-icon,
.autocomplete-richlistitem[type="action favicon"] .cliqz-ac-source-icon {
  background-color: #996699;
  background-image: url(chrome://cliqzres/content/skin/history.png);
}

.autocomplete-richlistitem[type="bookmark"] .cliqz-ac-source-icon,
.autocomplete-richlistitem[type="action bookmark"] .cliqz-ac-source-icon {
  background-color: #ffcc33;
  background-image: url(chrome://cliqzres/content/skin/favorite.png);
}

.autocomplete-richlistitem[type="cliqz-results"][selected="true"] {
  border-color: #336699;
}

.autocomplete-richlistitem[type="cliqz-suggestions"][selected="true"] {
  border-color: #99cccc;
}

/* history */
.autocomplete-richlistitem[type="favicon"][selected="true"] {
  border-color: #996699;
}

.autocomplete-richlistitem[type="bookmark"][selected="true"] {
  border-color: #ffcc33;
}

.autocomplete-richlistitem[selected="true"] {
  border-width: 3px 3px 3px 0;
}

.autocomplete-richlistitem[selected="true"] + .autocomplete-richlistitem {
  border-width: 0px 3px 0px 0;
}

.autocomplete-richlistitem:last-of-type {
  border-bottom-width: 3px;
}

.autocomplete-richlistitem[selected="true"] + .autocomplete-richlistitem:last-of-type {
  border-bottom-width: 3px;
}


.autocomplete-richlistitem[selected="true"] {
  background-color: white;
  background-image: none;
  /* override windows aero styles*/
  border-radius: 0px;
  outline: none;
}

.autocomplete-richlistitem:hover .cliqz-ac-source-icon, 
.autocomplete-richlistitem[selected="true"] .cliqz-ac-source-icon {
  width: 28px;
  /* margin-right: 0px; */
}
.autocomplete-richlistitem:hover {
  background-color: rgba(204, 204, 204, 0.2);
}

.autocomplete-richlistitem[selected="true"]:hover {
  background-color: white;
}

.cliqz-ac-logo-icon {
  width: 64px;
  height: 48px;
  background-repeat: no-repeat;
  background-position: left center;
  margin-top: 7px;
  margin-left: 20px;
}

.cliqz-history {
  background: url(chrome://cliqzres/content/skin/visited.gif) no-repeat center center;
}

.cliqz-bookmark {
  background: url(chrome://cliqzres/content/skin/bookmarked.gif) no-repeat center center;
}

.cliqz-results {
  background: url(chrome://cliqzres/content/skin/un-bookmarked.gif) no-repeat center center;
}

.cliqz-ac-url-detail-box {
  padding: 0px 5px;
  border-right: 2px solid white;
}

.cliqz-ac-url-domain {
  /*font-weight: bold;*/
}

.cliqz-ac-url-host {
  font-family: Verdana, Geneva, sans-serif;
  font-size: 9pt;
  color: #666666;
  font-weight: 400;
}

.cliqz-ac-url-path {
  font-family: Verdana, Geneva, sans-serif;
  /*font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;*/
  font-size: 9pt;
  color: #cccccc;
  font-weight: 400;
}

.cliqz-autocomplete-container {
  
}

.cliqz-urlbar-message-search {
  font-family: Verdana, Geneva, sans-serif;
  color: white;
  background-color: #00ccff;
  margin: 1px;
  padding: 1px 5px;
  border-radius: 1px;
}

.cliqz-urlbar-message-navigate {
  font-family: Verdana, Geneva, sans-serif;
  color: white;
  background-color: #ff6666; 
  margin: 1px;
  padding: 1px 5px;
  border-radius: 1px;
}

/*
@media (max-width: 1250px) {
  #right-cliqz {
    display: none;
  }
}
@media (min-width: 1250px) {
  #right-cliqz {
    width: 250px;
    background-color: green;
  }
}
*/
#right-cliqz {
  display: none;
}

/* url container */
.ac-url-box {
  height: 24px;
  padding-bottom: 5px;
}

.ac-emphasize-text  {
  background-color: transparent;
  box-shadow: none;
  font-family: Verdana, Geneva, sans-serif;
  font-size: 10pt;
  font-weight: 500; 
  /*color: #669999;*/
}

.autocomplete-richlistitem{
}

.autocomplete-richlistitem[type="bookmark"]{
}

.autocomplete-richlistitem[type="switchtab"]{
}
/* history */
.autocomplete-richlistitem[type="favicon"]{
}


/* misc */

.hidden {
  visibility: hidden;
  display: none !important;
}

/*
#urlbar {
    height: 30px !important;
    font-size: 30px !important;
}
*/

/* sidebar anchored in the right side 
hbox#browser { 
    direction: rtl !important;
     }  
hbox#browser > vbox {
    direction: ltr !important; 
    }

    */

